// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HitsPerPage renders markup with state 1`] = `
<ng-component
  testedWidget={[Function NgAisHitsPerPage]}
>
  
        <ais-instantsearch>
    
          
    <ais-hits-per-page>
      
      
      
      <div
        class="ais-HitsPerPage"
      >
        
        
        <select
          class="ais-HitsPerPage-select"
        >
          
          
          
          <option
            class="ais-HitsPerPage-option"
            value="10"
          >
            
            10 per page
          
          </option>
          <option
            class="ais-HitsPerPage-option"
            value="20"
          >
            
            20 per page
          
          </option>
          <option
            class="ais-HitsPerPage-option"
            value="30"
          >
            
            30 per page
          
          </option>
          
        
        </select>
        
      
      </div>
      
    
    </ais-hits-per-page>
    
        
  </ais-instantsearch>
      
</ng-component>
`;

exports[`HitsPerPage renders markup without state 1`] = `
<ng-component
  testedWidget={[Function NgAisHitsPerPage]}
>
  
        <ais-instantsearch>
    
          
    <ais-hits-per-page>
      
      
      
      <div
        class="ais-HitsPerPage"
      >
        
        
        <select
          class="ais-HitsPerPage-select"
        >
          
          
          
          
        
        </select>
        
      
      </div>
      
    
    </ais-hits-per-page>
    
        
  </ais-instantsearch>
      
</ng-component>
`;

exports[`HitsPerPage should be hidden with autoHideContainer 1`] = `
<ng-component
  testedWidget={[Function NgAisHitsPerPage]}
>
  
        <ais-instantsearch>
    
          
    <ais-hits-per-page>
      
      
      
      
    
    </ais-hits-per-page>
    
        
  </ais-instantsearch>
      
</ng-component>
`;
